log
Wed 24 Apr 2024 06:33:13 PM UTC: 
 tests:  0|6
total_score: 0/70
d91ff3b
Wed 24 Apr 2024 06:38:23 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|6
total_score: 0/70
ecf8477
Wed 24 Apr 2024 06:39:56 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d020f54
Wed 24 Apr 2024 06:41:04 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
922278b
Wed 24 Apr 2024 06:44:04 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:3: error: unknown type name ‘logn’; did you mean ‘long’?
   55 |   logn position = hash(key, map->capacity);
      |   ^~~~
      |   long
Compilation failed
da495d5
Wed 24 Apr 2024 06:44:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0a8e907
Wed 24 Apr 2024 06:44:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aae393f
Wed 24 Apr 2024 06:46:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1fbe85d
Wed 24 Apr 2024 06:47:36 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
7730e80
Wed 24 Apr 2024 06:49:53 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|4
total_score: 30/70
630da0e
Wed 24 Apr 2024 06:55:13 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 40/70
250f864
